[workspace]
resolver = "2"

members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/statemint",
	"parachains/runtimes/assets/statemine",
	"parachains/runtimes/assets/westmint",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/testing/penpal",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/paritytech/substrate"]
pallet-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-bags-list = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-weights = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-asset-tx-payment = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-try-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-society = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-system = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-membership = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-benchmarking = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-identity = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-session = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-aura = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-bounties = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-balances = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-assets = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-tips = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
beefy-merkle-tree = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-scheduler = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-multisig = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-executive = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-im-online = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-preimage = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-treasury = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-utility = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-sudo = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-offences = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-democracy = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-election-provider-support = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-collective = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
#pallet-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-uniques = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-recovery = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-support = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-support-procedural = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-nicks = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-staking-reward-fn = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-staking = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-indices = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-babe = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-proxy = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-vesting = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-informant = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
beefy-gadget-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
beefy-gadget = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-executor-common = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-executor = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-network-gossip = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-client-db = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-network = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-network-common = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-utils = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-rpc-server = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-client-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-service = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-rpc-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-chain-spec = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-peerset = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-basic-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-state-db = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-allocator = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-uncles = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-cli = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sc-telemetry = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
fork-tree = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
try-runtime-cli = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
pallet-template = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
node-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-test-utils-derive = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-test-client = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
substrate-test-utils = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-panic-handler = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-inherents = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-storage = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-std = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-version = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-database = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-debug-derive = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-session = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-core-hashing = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-core = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-keyring = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-runtime-interface = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-arithmetic = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-api = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-state-machine = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-wasm-interface = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-npos-elections = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
#sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-application-crypto = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-serializer = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-staking = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-trie = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-blockchain = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-consensus-vrf = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
sp-io = { git = "https://github.com/mangata-finance//substrate", branch = "mangata-dev-v0.9.36" }
